# runge-kutta-compute-shader

./: Cargo.toml  README.md  output.txt  plot.ipynb
src/: main.rs  shader.wgsl  simulation.rs
